fix animation for right dark mode icon

--- a/src/components/layout/Header/UserDropdown/UserDropdownItem/Icons/RightDarkModeIcon/RightDarkModeIcon.module.scss
+++ b/src/components/layout/Header/UserDropdown/UserDropdownItem/Icons/RightDarkModeIcon/RightDarkModeIcon.module.scss
@@ -1,11 +1,11 @@
 .RightDarkModeIcon {
 
   .a {
-    fill: none;
+    fill: transparent;
   }
 
   .b {
-    fill: none;
+    fill: transparent;
   }
 
   &.Active {
